--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\dzuy.nguyen\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\alber.DESKTOP-7PTR1VK\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
