i added the these as well I think?

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+user.properties.file=C:\\Users\\john.geronimo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 user.properties.file=C:\\Users\\rajul.bains\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
